--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  font-size: 0.64rem;
+  background: #E5E5E5;
+  line-height: 150%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  max-width: 100%;
+ }
+
+.container {
+    background: #FFFFFF;
+    max-width: 550px;
+    margin: 2.5rem auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav {
+      background: #F55A5A;
+      height: 55px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #FFFFFF;
+      font-weight: 500;
+      font-size: 0.904rem;
+      margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav > img {
+            
+            width: 24px;
+            height: 24px;
+            background-color: #FFFFFF;
+            margin-right:8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+        display: flex;
+        width: 470px;
+        margin: 0 auto;
+        padding-top: 20px;
+        justify-content: space-between;
+        border-bottom: 1px solid #F5F5F5;
+        padding-bottom: 20px;
 }
+
+.card > img {
+    width: 30%;
+    border-radius: 5px;
+}
+
+.card-content {
+                width: 67%;
+}
+
+.sm-title {
+            display: flex;
+            align-items: center;
+            margin-bottom: 0;
+            padding-bottom: 0;
+}
+
+.country {
+            margin-right: 12px;
+            text-transform: uppercase;
+}
+
+.landmark {
+            margin-top: 0;
+            font-weight: 700;
+            font-size: 25px;
+          
+}
+
