--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ img {
             
             width: 24px;
             height: 24px;
-            background-color: #FFFFFF;
+            background: #FFFFFF;
             margin-right:8px;
 }
 
@@ -67,6 +67,13 @@ img {
             align-items: center;
             margin-bottom: 0;
             padding-bottom: 0;
+}
+
+.sm-title > img {
+                  width: 7px;
+                  height: 9.55px;
+                  background: #F55A5A;
+                  margin-right: 4px;
 }
 
 .country {
