--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ img {
       font-weight: 500;
       font-size: 0.904rem;
       margin-bottom: 20px;
+      border-radius: 5px 5px 0 0;
 }
 
 .nav > img {
